[package]
name = "log_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-logfmt = { git = "https://github.com/euamcg/tracing-logfmt.git", branch = "add_coloured_keys", features = [
    "ansi_logs",
] }
nu-ansi-term = "0.46.0"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
